# AICap

./: .gitignore  CHANGELOG.md  README.md  build.ps1  build.sh  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  build.py  requirements.txt  run_server.py
backend/app/: __init__.py  config.py  main.py
backend/app/auth/: __init__.py  credentials.py  google_oauth.py  oauth.py  state_manager.py
backend/app/providers/: __init__.py  antigravity.py  openai_codex.py
backend/tests/: test_api.py  test_credentials.py  test_oauth.py
desktop/: index.html  package-lock.json  package.json
desktop/src/: i18n.ts  main.ts  styles.css
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/binaries/: .gitkeep
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
